testdata/invalid/internal/util/helpers.go
package util

func Help() string { return "help" }
